--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <canvas id=c></canvas>
   <canvas id="confetti"></canvas>
   <div class="container" id="count">
-    <h1 id="head">Countdown to your birthday:</h1>
+    <h1 id="head">Countdown to your birthday my special girl, you made me happy all these days. your day was coming in:</h1>
     <ul>
       <li><span id="day"></span>days</li>
       <li><span id="hour"></span>hours</li>
